# aimm

./: .dockerignore  .env  .gitignore  Cargo.toml  Dockerfile  README.md  TODO.md  api.dockerfile  dev.sh  docker-compose.yml  package-lock.json  package.json  tsconfig.json
cli/: args.rs  main.rs  manifest.rs  utils.rs
cli/subcommands/: add.rs  install.rs  mod.rs  scan.rs
client/: package-lock.json
client/web/: clientUtils.ts  index.css  index.html  index.tsx  package-lock.json  package.json  shared.ts  tsconfig.json  utils.ts  webpack.config.js  webpack.config.prod.js
client/web-cra/: package-lock.json
data/: aimmApi.ts  civitaiTypes.ts  data-hotfix.ts  dataUtils.ts  db.ts  dropLoraBenches.ts  hotfix.ts  huggingfaceTypes.ts  prismaClient.ts  schema.prisma  serialize.ts  temp.mark.civitai.subtype.ts
data/spiders/: civitai.ts  huggingface.ts  localCivitai.ts  mirror.ts  obtain.ts  s3like.ts  utils.ts
dev/: dev.nginx  dev.sh
ops/: .env.prod  admin.dockerfile  api.dockerfile  buildprod.sh  deploy-docker.sh  deploy.sh  deploy_nginx.sh  init-server.sh  spider.dockerfile  update-api-image.sh  update-remote.sh  web.dockerfile
ops/nginx/: headers.nginx  nginx.conf  routes.nginx  routes.stage.nginx  web_headers.nginx
ops/postgres/: postgresql.conf
server/: admin-api.ts  admin.ts  api.ts  hotfix.ts  index.ts  serverUtils.ts  spider.ts  test.ts  tsconfig.api.json  tsconfig.json  tsconfig.spider.json
server/ai/: remote-file-control.py  remote.js  sd-webui-api.ts  webui-types.ts
server/jobs/: civitai.ts  job.ts  (+4 more)
web/: Dockerfile  package.json  tsconfig.json
(+81 files in other folders)
