[package]
name = "aimm"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "aimm"
path = "cli/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", features = ["blocking", "json"] }
serde = { version = "1.0.162", features = ["derive"] }
sha2 = "0.10.6"
