[package]
name = "aimm"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "aimm"
path = "cli/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.2.7", features = ["derive"] }
git2 = "0.17.1"
reqwest = { version = "0.11", features = ["blocking", "json"] }
serde = { version = "1.0.162", features = ["derive"] }
serde_json = "1.0.96"
sha2 = "0.10.6"
url = "2.3.1"
